--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <h2 class="section-title">Ну давайте, свяжитесь с нами</h2>
                 <form class="contact-form" id="contactForm">
                     <div class="form-group">
-                        <label for="name">как тебя зовут</label>
+                        <label for="name">Как тебя зовут (не меня, тебя)</label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
