--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                     📞 Наш телефон: <strong>223 322 223 322</strong>
                 </div>
                 
-                <img src="https://raw.githubusercontent.com/laperla2004/ngtm/main/images/phone.webp"
+                <img src="https://raw.githubusercontent.com/laperla2004/nigaphone/main/images/phone.webp
                      alt="Телефон"
-                     class="phone-image">
+                     lcass="phone-image">
                 
                 <div class="contact-icons">
                     <div class="contact-icon">📧</div>
@@ -137,7 +137,7 @@
                 <div class="contact-info">
                     <p>📧 Email: contact@nigaphone.ru</p>
                     <p>🕒 Время работы: Пн-Пт 18:00-19:00</p>
-                    <p>📍 Адрес: г. Москва, ул. Связная, д. 7</p>
+                    <p>📍 Адрес: г. Москва, ул. Связная, д. 1</p>
                 </div>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5u4sWuHAtPzc_F5FJPhgBBFvUHpbClzayjvJnAZw8euknOg/viewform?usp=sharing&ouid=111910957891137954657" 
                    class="cta-button" target="_blank" style="margin-top: 20px;">Написать нам</a>
